hphp/hack/test/typecheck/tconst/interface2.php.exp
File "interface2.php", line 4, characters 23-23:
The constraint on this type constant is inconsistent with its parent (Typing[4110])
File "interface2.php", line 7, characters 28-35:
Expected arraykey
File "interface2.php", line 4, characters 28-32:
But got mixed
File "interface2.php", line 4, characters 23-23:
This declaration was inherited from an object of type I1. Redeclare this member in I with a compatible signature.
